<resources>
    <string name="app_name">Shop5</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="status">Статус наличия в магазигах:</string>
    <string name="price">Цена:</string>
    <string name="color">Цвет:</string>
    <string name="a">7290 рублей</string>
    <string name="b">Нет в наличие</string>
    <string name="c">Белый</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_map">MapActivity</string>
</resources>